force-app/main/default/objects/Application__c/fields/Application_Code__c.field-meta.xml
<CustomField>
    <fullName>Application_Code__c</fullName>
    <label>Application Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>