force-app/main/default/objects/Application__c/fields/Application_Rating__c.field-meta.xml
<CustomField>
    <fullName>Application_Rating__c</fullName>
    <label>Application Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>