force-app/main/default/objects/Application__c/fields/Been_in_a_SAICA_Contract__c.field-meta.xml
<CustomField>
    <fullName>Been_in_a_SAICA_Contract__c</fullName>
    <label>Been in a SAICA Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>