force-app/main/default/objects/Application__c/fields/Criminal_record__c.field-meta.xml
<CustomField>
    <fullName>Criminal_record__c</fullName>
    <label>Criminal record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>