force-app/main/default/objects/Application__c/fields/Family_in_PWC__c.field-meta.xml
<CustomField>
    <fullName>Family_in_PWC__c</fullName>
    <label>Family in PWC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>