force-app/main/default/objects/Application__c/fields/First_University_Choice__c.field-meta.xml
<CustomField>
    <fullName>First_University_Choice__c</fullName>
    <label>First University Choice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>