force-app/main/default/objects/Application__c/fields/Graduate_Type__c.field-meta.xml
<CustomField>
    <fullName>Graduate_Type__c</fullName>
    <label>Graduate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bursary</fullName>
            </value>
            <value>
                <fullName>Non Bursary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>