force-app/main/default/objects/Application__c/fields/Have_you_applied_elsewhere__c.field-meta.xml
<CustomField>
    <fullName>Have_you_applied_elsewhere__c</fullName>
    <label>Have you applied elsewhere,</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>