force-app/main/default/objects/Application__c/fields/Hiring_Manager_Interview_Decline__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager_Interview_Decline__c</fullName>
    <label>Hiring Manager Interview/ Decline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>