force-app/main/default/objects/Application__c/fields/Job_Spec__c.field-meta.xml
<CustomField>
    <fullName>Job_Spec__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Spec</label>
    <referenceTo>Job_Spec__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>