force-app/main/default/objects/Application__c/fields/Matric_Average__c.field-meta.xml
<CustomField>
    <fullName>Matric_Average__c</fullName>
    <label>Matric Average</label>
    <length>10</length>
    <type>Text</type>
</CustomField>