force-app/main/default/objects/Application__c/fields/Matric_Results__c.field-meta.xml
<CustomField>
    <fullName>Matric_Results__c</fullName>
    <label>Matric Results</label>
    <type>TextArea</type>
</CustomField>