force-app/main/default/objects/Application__c/fields/Non_Negotiables__c.field-meta.xml
<CustomField>
    <fullName>Non_Negotiables__c</fullName>
    <label>Minimum Requirements</label>
    <type>TextArea</type>
</CustomField>