force-app/main/default/objects/Application__c/fields/Questions_and_Answers__c.field-meta.xml
<CustomField>
    <fullName>Questions_and_Answers__c</fullName>
    <label>Questions and Answers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>