force-app/main/default/objects/Application__c/fields/Recruiter_Review__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Review__c</fullName>
    <label>Recruiter Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good Fit</fullName>
            </value>
            <value>
                <fullName>Bad Fit</fullName>
            </value>
            <value>
                <fullName>Need Clarifying Questions set up a call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>