force-app/main/default/objects/Application__c/fields/Second_preferred_office__c.field-meta.xml
<CustomField>
    <fullName>Second_preferred_office__c</fullName>
    <label>Second preferred office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cape Town</fullName>
            </value>
            <value>
                <fullName>Stellenbosch</fullName>
            </value>
            <value>
                <fullName>Worcester</fullName>
            </value>
            <value>
                <fullName>Robertson</fullName>
            </value>
            <value>
                <fullName>Gqeberha</fullName>
            </value>
            <value>
                <fullName>East London</fullName>
            </value>
            <value>
                <fullName>Durban</fullName>
            </value>
            <value>
                <fullName>Pietermaritzburg</fullName>
            </value>
            <value>
                <fullName>Bloemfontein</fullName>
            </value>
            <value>
                <fullName>Mahikeng</fullName>
            </value>
            <value>
                <fullName>Kimberley</fullName>
            </value>
            <value>
                <fullName>Nelspruit</fullName>
            </value>
            <value>
                <fullName>Emalahleni</fullName>
            </value>
            <value>
                <fullName>Waterfall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>