force-app/main/default/objects/Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Qualifying questions</fullName>
            </value>
            <value>
                <fullName>Recruiter Review</fullName>
            </value>
            <value>
                <fullName>Review candidate for Manager</fullName>
            </value>
            <value>
                <fullName>To be reviewed by Hiring Manager</fullName>
            </value>
            <value>
                <fullName>Grad Interviews</fullName>
            </value>
            <value>
                <fullName>Interviewing with hiring Manager</fullName>
            </value>
            <value>
                <fullName>Post hiring manager interview</fullName>
            </value>
            <value>
                <fullName>Verifications Sent - pending</fullName>
            </value>
            <value>
                <fullName>Review Verifications</fullName>
            </value>
            <value>
                <fullName>Salary negotiations</fullName>
            </value>
            <value>
                <fullName>Contract creation</fullName>
            </value>
            <value>
                <fullName>Contract signed</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>