force-app/main/default/objects/Application__c/fields/Technical_Questions__c.field-meta.xml
<CustomField>
    <fullName>Technical_Questions__c</fullName>
    <label>Technical Questions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>