force-app/main/default/objects/Application__c/fields/What_makes_applicant_a_good_fit__c.field-meta.xml
<CustomField>
    <fullName>What_makes_applicant_a_good_fit__c</fullName>
    <label>What makes applicant a good fit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>