force-app/main/default/objects/Application__c/fields/What_makes_you_a_great_addition_to_PwC__c.field-meta.xml
<CustomField>
    <fullName>What_makes_you_a_great_addition_to_PwC__c</fullName>
    <label>What makes you a great addition to PwC?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>