force-app/main/default/objects/Application__c/fields/What_requirements_Skills_missing__c.field-meta.xml
<CustomField>
    <fullName>What_requirements_Skills_missing__c</fullName>
    <label>What requirements/ Skills missing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>