force-app/main/default/objects/Application__c/fields/Year_of_intake__c.field-meta.xml
<CustomField>
    <fullName>Year_of_intake__c</fullName>
    <label>Year of intake</label>
    <length>20</length>
    <type>Text</type>
</CustomField>