force-app/main/default/objects/Application__c/recordTypes/Bursary.recordType-meta.xml
<RecordType>
    <fullName>Bursary</fullName>
    <active>true</active>
    <label>Bursary</label>
</RecordType>