force-app/main/default/objects/Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <columns>What_makes_applicant_a_good_fit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>