force-app/main/default/objects/Application__c/listViews/Applications_to_be_reviewed.listView-meta.xml
<ListView>
    <fullName>Applications_to_be_reviewed</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Review candidate for Manager</value>
    </filters>
    <label>Applications to be reviewed</label>
</ListView>